# homelab-autodoist-scheduler

./: Dockerfile  Jenkinsfile  README.md  pyproject.toml
src/autodoist_scheduler/: __main__.py  config.py  scheduler.py
tests/: test_config.py  test_scheduler.py
