[project]
name = "homelab-autodoist-scheduler"
version = "0.1.0"
description = "Interval scheduler that triggers autodoist-events internal fallback endpoint"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Evan Rauner", email = "raunerevan@gmail.com" }
]
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
autodoist-events-scheduler = "autodoist_scheduler.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autodoist_scheduler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]
